--- a/_newsroom/Speeches/2012.md
+++ b/_newsroom/Speeches/2012.md
@@ -4,7 +4,7 @@ permalink: /newsroom/Speeches/2012
 description: ""
 third_nav_title: Speeches
 ---
-
+<html>
 <img class="MicIcon" src="/images/icons/ico_speeches.png" align="left">
 <br><font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Speeches</font><br><br><br>
 <font size="+2"><b>September 2012</b></font><br>
@@ -20,8 +20,8 @@ img.MicIcon {
 a.hyperlink {
 	color:green;
 	}
-	  }
 a.hyperlink:hover {
     color:MediumVioletRed;
 }
 </style>
+</html>
