--- a/_newsroom/Speeches/2010.md
+++ b/_newsroom/Speeches/2010.md
@@ -4,29 +4,16 @@ permalink: /newsroom/Speeches/2010
 description: ""
 third_nav_title: Speeches
 ---
-
+<html>
 <img class="MicIcon" src="/images/icons/ico_speeches.png" align="left">
 <br><font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Speeches</font><br><br><br>
-<font size="+2"><b>November 2010</b></font><br>
+<font size="+2"><b>November 2010</b></font><br><br>
 
 2 November 2010<br>
 <a class="hyperlink" href="http://www.ssg-wsg.gov.sg/speeches/02_Nov_2010.html">Speech by Deputy Prime Minister Teo Chee Hean at The WSQ Partnership Night held on 02 November 2010, 6:00pm At Shangri-La Hotel, Island Ballroom
-</a>
-<style>
-img.MicIcon {
-  height: 15%;
-  width: 15%;
-}
-a.hyperlink {
-	color:green;
-	}
-	  }
-a.hyperlink:hover {
-    color:MediumVioletRed;
-}
-</style>
+</a><br><br>
 
-<b>July 2010</b></font><br>
+<b>July 2010</b></font><br><br>
 
 27 July 2010<br>
 <a class="hyperlink" href="http://www.ssg-wsg.gov.sg/speeches/27_Jul_2010.htmll">Speech by Mr. Gan Kim Yong, Minister for Manpower, at the Precision Engineering WSQ Diploma Graduation Ceremony at 3.00 PM on 27 July 2010 at the Singapore Polytechnic
@@ -39,8 +26,8 @@ img.MicIcon {
 a.hyperlink {
 	color:green;
 	}
-	  }
 a.hyperlink:hover {
     color:MediumVioletRed;
 }
 </style>
+</html>
