--- a/_newsroom/Press Release/2022.md
+++ b/_newsroom/Press Release/2022.md
@@ -4,12 +4,12 @@ permalink: /newsroom/Press-Release/2022
 description: ""
 third_nav_title: Press Release
 ---
+<html>
 <img align="left" src="/images/icons/ico_media_articles.png" class="PressReleaseIcon">
 <br>
-<font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font>
-<br>
+<font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br>
 
-<font size="+2"><b>February 2022</b></font><br>
+<font size="+2"><b>February 2022</b></font><br><br>
 
 18 February 2022<br>
 <a class="hyperlink" href="/files/pdf-press-release/Feb%202022/Enhanced%20Workfare%20Income%20Supplement%20Scheme%20From%20Work%20Year%202023.pdf">Enhanced Workfare Income Supplement Scheme From Work Year 2023 (696KB)</a>
@@ -25,3 +25,4 @@ a.hyperlink:hover {
     color:MediumVioletRed;
   }
 </style>
+</html>
