--- a/_newsroom/Press Release/2022.md
+++ b/_newsroom/Press Release/2022.md
@@ -7,7 +7,7 @@ third_nav_title: Press Release
 <html>
 <img align="left" src="/images/icons/ico_media_articles.png" class="PressReleaseIcon">
 <br>
-<font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br>
+<font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br>
 
 <font size="+2"><b>February 2022</b></font><br><br>
 
