--- a/_newsroom/Press Release/2019.md
+++ b/_newsroom/Press Release/2019.md
@@ -7,27 +7,27 @@ third_nav_title: Press Release
 <html>
 <img align="left" src="/images/icons/ico_media_articles.png" class="PressReleaseIcon">
 <br>
-<font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br>
+<font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br><br>
 
-<font size="+2"><b>December 2019</b></font><br>
-
-4 December 2019<br>
-<a class="hyperlink" href="/files/pdf-press-release/dec-2019/Workfare%20Factsheet-English.pdf">Workfare Factsheet (English) (151KB)</a>
+<font size="+2"><b>December 2019</b></font><br><br>
 
 4 December 2019<br>
-<a class="hyperlink" href="/files/pdf-press-release/dec-2019/Workfare%20Factsheet-Chinese.pdf">Workfare Factsheet (Chinese) (265KB)</a>
+<a class="hyperlink" href="/files/pdf-press-release/dec-2019/Workfare%20Factsheet-English.pdf">Workfare Factsheet (English) (151KB)</a><br>
 
 4 December 2019<br>
-<a class="hyperlink" href="/files/pdf-press-release/dec-2019/Workfare%20Factsheet-Malay.pdf">Workfare Factsheet (Malay) (151KB)</a>
+<a class="hyperlink" href="/files/pdf-press-release/dec-2019/Workfare%20Factsheet-Chinese.pdf">Workfare Factsheet (Chinese) (265KB)</a><br>
+
+4 December 2019<br>
+<a class="hyperlink" href="/files/pdf-press-release/dec-2019/Workfare%20Factsheet-Malay.pdf">Workfare Factsheet (Malay) (151KB)</a><br>
 
 4 December 2019 <br>
-<a class="hyperlink" href="/files/pdf-press-release/dec-2019/Workfare%20Factsheet-Tamil.pdf">Workfare Factsheet (Tamil) (885KB)</a>
+<a class="hyperlink" href="/files/pdf-press-release/dec-2019/Workfare%20Factsheet-Tamil.pdf">Workfare Factsheet (Tamil) (885KB)</a><br><br>
 
-<br><font size="+2"><b>March 2019</b></font><br>
+<br><font size="+2"><b>March 2019</b></font><br><br>
 6 March 2019<br>
-<a class="hyperlink" href="/files/pdf-press-release/mar-2019/Workfare%20Infographic%20Flyer%202019.pdf">Workfare Infographic Flyer 2019 (2.74MB)</a>
+<a class="hyperlink" href="/files/pdf-press-release/mar-2019/Workfare%20Infographic%20Flyer%202019.pdf">Workfare Infographic Flyer 2019 (2.74MB)</a><br><br>
 
-<br><font size="+2"><b>February 2019</b></font><br>
+<br><font size="+2"><b>February 2019</b></font><br><br>
 18 February 2019<br>
 <a class="hyperlink" href="/files/pdf-press-release/feb-2019/PressRelease_Feb2019.pdf">Factsheet on Enhancements to the Workfare Income Supplement Scheme (257KB)</a>
 
