--- a/_newsroom/Press Release/2013.md
+++ b/_newsroom/Press Release/2013.md
@@ -9,15 +9,13 @@ third_nav_title: Press Release
 src="/images/icons/ico_media_articles.png" class="PressReleaseIcon">
 <br>
 <font align="center" color="green"
-size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br>
+size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br><br>
 
 <font size="+2"><b>June 2013</b></font><br><br>
-
 6 June 2013<br>
 <a class="hyperlink" href="http://www.ssg-wsg.gov.sg/new-and-announcements/2013/5_Jun_2013.html">New Study Reveals Positive Impact of WSQ Training on Wages</a><br><br>
 
 <font size="+2"><b>January 2013</b></font><br><br>
-
 1 January 2013<br>
 <a class="hyperlink" href="/files/pdf-press-release/jan-2013/FACTSHEET%20ON%20CHANGES%20TO%20THE%20WORKFARE%20INCOME%20SUPPLEMENT%20SCHEME%20AND%20CPF%20CONTRIBUTION%20RATES%20FOR%20LOW%20WAGE%20WORKERS.pdf">Factsheet on changes to the Workfare Income Supplement Scheme and CPF contribute rates for low-wage workers (87KB)</a>
 
