--- a/_newsroom/Press Release/2011.md
+++ b/_newsroom/Press Release/2011.md
@@ -9,10 +9,9 @@ third_nav_title: Press Release
 src="/images/icons/ico_media_articles.png" class="PressReleaseIcon">
 <br>
 <font align="center" color="green"
-size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br>
+size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br><br>
 
 <font size="+2"><b>March 2011</b></font><br><br>
-
 26 March 2011 <br>
 <a class="hyperlink" href="http://www.ssg-wsg.gov.sg/new-and-announcements/2011/26_Mar_2011.html">WDA To Expand Outreach Of Workfare Training Support Scheme To More Low-Wage Workers</a>
 
