--- a/_newsroom/Media Articles/2013.md
+++ b/_newsroom/Media Articles/2013.md
@@ -4,6 +4,7 @@ permalink: /newsroom/Media-Articles/permalink
 description: ""
 third_nav_title: Media Articles
 ---
+<html>
 <img align="left" src="/images/icons/ico_media_articles.png" class="PressReleaseIcon"><br><font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Media Articles</font>
 <br><br><br>
 <font size="+2"><b>March 2013</b></font><br>
@@ -27,3 +28,4 @@ a.hyperlink:hover {
     color:MediumVioletRed;
 }
 </style>
+</html>
