--- a/_newsroom/Media Articles/2013.md
+++ b/_newsroom/Media Articles/2013.md
@@ -7,10 +7,10 @@ third_nav_title: Media Articles
 <html>
 <img align="left" src="/images/icons/ico_media_articles.png" class="PressReleaseIcon"><br><font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Media Articles</font>
 <br><br><br>
-<font size="+2"><b>March 2013</b></font><br>
+<font size="+2"><b>March 2013</b></font><br><br>
 
 6 March 2013<br>
-<a class="hyperlink" href="https://www.mom.gov.sg/newsroom/press-replies/2013/part-time-workers-also-get-workfare-income-supplem">Part-time workers also get Workfare Income Supplement</a>
+<a class="hyperlink" href="https://www.mom.gov.sg/newsroom/press-replies/2013/part-time-workers-also-get-workfare-income-supplem">Part-time workers also get Workfare Income Supplement</a><br><br>
 
 6 March 2013<br>
 <a class="hyperlink" href="https://www.mom.gov.sg/newsroom/press-replies/2013/part-time-workers-do-get-workfare-payouts
