--- a/_newsroom/Media Articles/2008.md
+++ b/_newsroom/Media Articles/2008.md
@@ -4,10 +4,10 @@ permalink: /newsroom/Media-Articles/2008
 description: ""
 third_nav_title: Media Articles
 ---
-
+<html>
 <img align="left" src="/images/icons/ico_media_articles.png" class="PressReleaseIcon"><br><font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Media Articles</font>
 <br><br><br>
-<font size="+2"><b>February 2008</b></font><br>
+<font size="+2"><b>February 2008</b></font><br><br>
 
 4 February 2008<br>
 <a class="hyperlink" href="http://www.mom.gov.sg/newsroom/press-replies/2008/new-workfare-scheme-helps-more-workers-now">New Workfare Scheme Helps More Workers Now</a>
@@ -24,3 +24,4 @@ a.hyperlink:hover {
     color:MediumVioletRed;
 }
 </style>
+</html>
