--- a/_newsroom/Media Articles/2007.md
+++ b/_newsroom/Media Articles/2007.md
@@ -4,10 +4,10 @@ permalink: /newsroom/Media-Articles/2007
 description: ""
 third_nav_title: Media Articles
 ---
-
+<html>
 <img align="left" src="/images/icons/ico_media_articles.png" class="PressReleaseIcon"><br><font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Media Articles</font>
 <br><br><br>
-<font size="+2"><b>October 2007</b></font><br>
+<font size="+2"><b>October 2007</b></font><br><br>
 
 1 October 2007<br>
 <a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Pages/Workfare%20The%20Fourth%20Pillar%20of%20Social%20Security%20in%20Singapore.pdf">Workfare: The Fourth Pillar of Social Security in Singapore (650KB)</a>
@@ -24,3 +24,4 @@ a.hyperlink:hover {
     color:MediumVioletRed;
 }
 </style>
+</html>
