--- a/_newsroom/Press Release/2022.md
+++ b/_newsroom/Press Release/2022.md
@@ -8,7 +8,13 @@ third_nav_title: Press Release
 <img align="left" src="/images/icons/ico_media_articles.png" class="PressReleaseIcon">
 <br>
 <font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br><br>
+	
+<font size="+2"><b>July 2022</b></font><br><br>
 
+12 July 2022<br>
+<a class="hyperlink" href="/files/pdf-press-release/July%202022/Uplifting%20the%20Wages%20and%20Well-being%20of%20Lower-Wage%20Workers.pdf">Uplifting the Wages and Well-being of Lower-Wage Workers (2.38MB)</a><br>
+
+	
 <font size="+2"><b>February 2022</b></font><br><br>
 
 18 February 2022<br>
