--- a/_newsroom/Press Release/2012.md
+++ b/_newsroom/Press Release/2012.md
@@ -9,7 +9,7 @@ third_nav_title: Press Release
 src="/images/icons/ico_media_articles.png" class="PressReleaseIcon">
 <br>
 <font align="center" color="green"
-size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br><br>
+size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br><br><br>
 
 <font size="+2"><b>January 2012</b></font><br><br>
 1 January 2012<br>
