--- a/_newsroom/Press Release/2009.md
+++ b/_newsroom/Press Release/2009.md
@@ -10,7 +10,7 @@ src="/images/icons/ico_media_articles.png"
 class="PressReleaseIcon">
 <br>
 <font align="center" color="green"
-size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br><br>
+size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br><br><br>
 	
 <font size="+2"><b>February 2009</b></font><br><br>
 28 February 2009<br>
