--- a/_newsroom/Press Release/2007.md
+++ b/_newsroom/Press Release/2007.md
@@ -10,7 +10,7 @@ src="/images/icons/ico_media_articles.png"
 class="PressReleaseIcon">
 <br>
 <font align="center" color="green"
-size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br><br>
+size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Press Releases</font><br><br><br><br>
 
 <font size="+2"><b>December 2007</b></font><br><br>
 28 December 2007<br>
